[tool.poetry]
name = "repl-nix-website-qa-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.3"
flask = "^3.0.3"
requests = "^2.32.3"
transformers = "^4.44.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
